--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -1,40 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="theme"
             type="uz.mahmudxon.halqa.util.theme.Theme" />
+        <variable name="loading" type="Boolean" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        backgroundColor="@{theme.backgroundColor}">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:layout_margin="16dp"
+            app:cardCornerRadius="?actionBarSize"
+            android:layout_width="?actionBarSize"
             android:layout_height="?actionBarSize"
-            android:orientation="horizontal">
-
-
+            cardBackColor="@{theme.cardColor}"
+            >
             <ImageView
+                android:id="@+id/back_button"
                 android:padding="16dp"
-                android:layout_width="wrap_content"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                iconColor="@{theme.primaryTextColor}"
+                />
+        </androidx.cardview.widget.CardView>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+
+        <include android:id="@+id/chapter_layout" layout="@layout/layout_chapter"
+            visibility="@{!loading}"
+            />
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            backgroundColor="@{theme.breakLineColor}" />
+            android:layout_height="match_parent"
+            visibility="@{loading}">
 
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                progressColor="@{theme.primaryTextColor}"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:indeterminate="true" />
 
-        <include android:id="@+id/chapter_layout" layout="@layout/layout_chapter"/>
+        </FrameLayout>
 
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </FrameLayout>
 </layout>
