--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,26 +3,22 @@
     <!-- Classic Theme. -->
     <style name="Classic" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/cl_color_primary</item>
-        <item name="colorPrimaryDark">@color/black</item>
+        <item name="colorPrimaryDark">@color/cl_color_primary_dark</item>
         <item name="colorAccent">@color/cl_color_accent</item>
         <item name="android:fontFamily">@font/sf_pro_display</item>
         <item name="android:windowEnableSplitTouch">false</item>
         <item name="android:splitMotionEvents">false</item>
         <item name="android:windowContentTransitions">true</item>
-        <item name="android:textColor">@color/cl_def_text_color</item>
-        <item name="android:textColorSecondary">@color/cl_secondary_text_color</item>
     </style>
 
     <style name="NightTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:fontFamily">@font/sf_pro_display</item>
         <item name="colorPrimary">@color/n_color_primary</item>
-        <item name="android:textColor">@color/n_def_text_color</item>
         <item name="android:windowEnableSplitTouch">false</item>
         <item name="android:splitMotionEvents">false</item>
         <item name="colorPrimaryDark">@color/n_color_primary_dark</item>
         <item name="colorAccent">@color/n_color_accent</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-        <item name="android:textColorSecondary">@color/n_secondary_text_color</item>
     </style>
 
     <style name="NavigationViewStyle">
