--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -10,31 +10,47 @@
         <variable name="loading" type="Boolean" />
     </data>
 
-    <FrameLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         backgroundColor="@{theme.backgroundColor}">
 
-        <androidx.cardview.widget.CardView
-            android:layout_margin="16dp"
-            app:cardCornerRadius="?actionBarSize"
-            android:layout_width="?actionBarSize"
-            android:layout_height="?actionBarSize"
-            cardBackColor="@{theme.cardColor}"
-            >
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="?actionBarSize">
+
+
             <ImageView
                 android:id="@+id/back_button"
                 android:padding="16dp"
                 android:layout_gravity="center"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_baseline_arrow_back_ios_24"
                 iconColor="@{theme.primaryTextColor}"
                 />
-        </androidx.cardview.widget.CardView>
 
 
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:freezesText="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                textColor="@{theme.primaryTextColor}"
+                android:textSize="18sp"
+                />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <include android:id="@+id/chapter_layout" layout="@layout/layout_chapter"
             visibility="@{!loading}"
@@ -54,5 +70,5 @@
 
         </FrameLayout>
 
-    </FrameLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
