--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,4 +8,23 @@
     android:background="@color/cl_background"
     android:fitsSystemWindows="true">
 
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_thorn_ring"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
 </FrameLayout>
