--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -39,6 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_chapter"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
