--- a/app/src/main/res/layout/item_chapter.xml
+++ b/app/src/main/res/layout/item_chapter.xml
@@ -25,9 +25,10 @@
         android:foreground="?selectableItemBackground"
         cardBackColor="@{theme.cardColor}"
         app:cardElevation="1dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
         android:layout_marginBottom="2dp"
-        app:cardCornerRadius="2dp"
-        >
+        app:cardCornerRadius="2dp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
