--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,6 +19,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:gravity="center"
+            backgroundColor="@{theme.actionBarColor}"
             android:layout_height="?actionBarSize">
 
             <TextView
@@ -40,13 +41,14 @@
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            backgroundColor="@{theme.backgroundColor}"
+            backgroundColor="@{theme.actionBarColor}"
             app:menu="@menu/main_bottom_menu"
             />
 
