--- a/app/src/main/res/layout/layout_chapter.xml
+++ b/app/src/main/res/layout/layout_chapter.xml
@@ -16,7 +16,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        backgroundColor="@{theme.cardColor}"
+        backgroundColor="@{theme.backgroundColor}"
         >
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingTop="30dp"
+            android:paddingBottom="30dp"
             >
 
             <TextView
