--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -8,6 +8,10 @@
         <variable
             name="theme"
             type="uz.mahmudxon.halqa.util.theme.Theme" />
+
+        <variable
+            name="onClick"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <androidx.core.widget.NestedScrollView
@@ -116,13 +120,17 @@
                         android:layout_marginEnd="16dp" />
 
                     <androidx.appcompat.widget.LinearLayoutCompat
+                        android:id="@+id/changeTheme"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
+                        android:background="?selectableItemBackground"
+                        onClick="@{onClick}"
                         android:orientation="horizontal">
 
 
                         <ImageView
+                            android:id="@+id/theme_icon"
                             iconColor="@{theme.primaryTextColor}"
                             android:layout_width="?actionBarSize"
                             android:layout_height="?actionBarSize"
