--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,23 +35,20 @@
     </style>
 
 
-    <style name="Splash" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/cl_color_primary</item>
-        <item name="colorPrimaryDark">@color/cl_color_primary_dark</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-        <item name="colorAccent">@color/cl_color_accent</item>
-        <item name="android:fontFamily">@font/sf_pro_display</item>
-        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
-        <item name="android:navigationBarColor">@color/cl_background</item>
-        <item name="android:windowEnableSplitTouch">false</item>
-        <item name="android:splitMotionEvents">false</item>
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:fitsSystemWindows">true</item>
-        <item name="android:windowTranslucentNavigation">false</item>
-        <item name="android:backgroundDimEnabled">false</item>
+    <style name="Starting" parent="Theme.SplashScreen">
+        <!-- Set the splash screen background, animated icon, and animation duration. -->
+        <item name="windowSplashScreenBackground">@color/white</item>
+
+        <!-- Use windowSplashScreenAnimatedIcon to add either a drawable or an
+             animated drawable. One of these is required. -->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_thorn_ring</item>
+        <!-- Required for animated icons -->
+        <item name="windowSplashScreenAnimationDuration">200</item>
+
+        <!-- Set the theme of the Activity that directly follows your splash screen. -->
+        <!-- Required -->
+        <item name="postSplashScreenTheme">@style/Classic</item>
     </style>
+
 
 </resources>
