--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -73,6 +73,7 @@
                             android:textSize="16sp" />
 
                         <CheckBox
+                            android:id="@+id/autoThemeChange"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@null"
